add new templates for routes

--- a/flask_app/templates/new_dnac_template.html
+++ b/flask_app/templates/new_dnac_template.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>New Recipe</title>
     <link rel="stylesheet" type="text/css" href="/static/style.css">
 </head>
 
 <body>
-This is the user page
+This is the new template page
 </body>
 
 </html>
