fix typo in create template

--- a/flask_app/templates/new_dnac_template.html
+++ b/flask_app/templates/new_dnac_template.html
@@ -28,7 +28,7 @@
         <input type="checkbox" id="chk" aria-hidden="true">
             <div class="register">
                 <form action="/dnac_template/new/process" method="post">
-                    <input type="text" name="tamplate_name" id="template_name" placeholder="Template Name">
+                    <input type="text" name="template_name" id="template_name" placeholder="Template Name">
                     <input type="text" name="template_body" id="template_body" placeholder="Template Body">
                     <button type="submit">Create Template</button>
                 </form>
