fix author on dashboard

--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -25,7 +25,7 @@
                 <thead>
                     <tr>
                         <th>Template Name</th>
-                        <th>Template Body</th>
+                        <th>Template Author</th>
                     </tr>
                 </thead>
 
