--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <h1 class="page_title">DNAC Template Repository</h1>
-    <div class="main">
+    <h1 class="page_title">HTTS/CNS DNAC Template Repository</h1>
+    <div class="container">
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 {% for category, message in messages if category == "register" %}
@@ -20,18 +20,18 @@
                 {% endfor %}
             {% endif %}
         {% endwith %}
-            <div class="register">
-                <form action="/user/register/process" method="post">
-                    <label for="chk" aria-hidden="true">Register</label>
-                    <input type="text" name="first_name" id="first_name" placeholder="First Name">
-                    <input type="text" name="last_name" id="last_name" placeholder="Last Name">
-                    <input type="text" name="email" id="email" placeholder="Email">
-                    <input type="password" name="password" id="password" placeholder="Password">
-                    <input type="password" name="confirm_password" id="confirm_password" placeholder="Confirm Password">
-                    <button type="submit">Register</button>
+            <div class="mb-3">
+                <form action="/user/register/process" method="post" class="w-25 p-3">
+                    <label>Register</label>
+                    <input class="form-control" type="text" name="first_name" id="first_name" placeholder="First Name">
+                    <input class="form-control" type="text" name="last_name" id="last_name" placeholder="Last Name">
+                    <input class="form-control" type="text" name="email" id="email" placeholder="Email">
+                    <input class="form-control" type="password" name="password" id="password" placeholder="Password">
+                    <input class="form-control" type="password" name="confirm_password" id="confirm_password" placeholder="Confirm Password">
+                    <button type="submit" class="btn btn-info">Register</button>
                 </form>
             </div>
-        <div class="login">
+        <div class="mb-3">
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                     {% for category, message in messages if category == "login" %}
@@ -39,11 +39,11 @@
                     {% endfor %}
                 {% endif %}
             {% endwith %}
-            <form action="/user/login/process" method="post">
-                <label for="chk" aria-hidden="true">Login</label>
-                <input type="email" name="email" id="email" placeholder="Email">
-                <input type="password" name="password" id="password" placeholder="Password">
-                <button type="submit">Login</button>
+            <form action="/user/login/process" method="post" class="w-25 p-3">
+                <label>Login</label>
+                <input class="form-control" type="email" name="email" id="email" placeholder="Email">
+                <input class="form-control" type="password" name="password" id="password" placeholder="Password">
+                <button type="submit" class="btn btn-info">Login</button>
             </form>
         </div>
     </div>
