--- a/flask_app/templates/user.html
+++ b/flask_app/templates/user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -14,11 +14,11 @@
     <div class="dashboard">
         <h1 class="page_title">DNAC Templates</h1>
         <h2 class="page_title">Welcome {{session.first_name}}</h2>
-        <a href="/dashboard"><button>Dashboard</button></a>
-        <a href="/dnac_template/new"><button>Create a Template</button></a>
+        <a href="/dashboard"><button type="button" class="btn btn-outline-info">Dashboard</button></a>
+        <a href="/dnac_template/new"><button type="button" class="btn btn-outline-info">Create a Template</button></a>
         <div class="container">
             <h1>Template Information</h1>
-            <table>
+            <table class="table">
                 <tr>
                     <th>ID</th>
                     <th>Template Name</th>
@@ -35,7 +35,7 @@
                 {% endfor %}
             </table>
         </div>
-        <a href="/user/logout"><button>Logout</button></a>
+        <a href="/user/logout"><button type="button" class="btn btn-outline-info">Logout</button></a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
