--- a/flask_app/templates/view_dnac_template.html
+++ b/flask_app/templates/view_dnac_template.html
@@ -15,14 +15,16 @@
     <div class="container">
         <p>Created by: {{dnac_template.creator.first_name}}</p>
         <p>Template Body:</p>
-        <p>{{dnac_template.template_body}}</p>
+        <p id="content-copy">{{dnac_template.template_body}}</p>
     </div>
+    <button id="btn-copy" type="button" class="btn btn-outline-info">Copy Template to Clipboard</button></a>
     <!-- Conditional button -->
     {% if session['user_id'] == dnac_template.creator.id %}
         <a href="/dnac_template/edit/{{dnac_template.id}}"><button type="button" class="btn btn-outline-info">Edit</button></a>
         <a href="/dnac_template/destroy/{{dnac_template.id}}"><button type="button" class="btn btn-outline-info">Delete</button></a>
     {% endif %}
     <a href="/user/logout"><button type="button" class="btn btn-outline-info">Logout</button></a>
+    <script src="/static/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 
